# static_fileserver

./: Cargo.toml  README.md  deploy_run_pi.sh  rocket.toml
files/images/jorn/: p3M06EkLPJiW
src/: directory.rs  image.rs  main.rs  path_dir.rs
static/css/: main.css
templates/: directory.html.hbs  head.html.hbs
