[package]
name = "static_fileserver"
version = "0.1.0"
authors = ["Jorn van Wier <jornvanwier@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]